--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-surrealdb = {version = "1.0.0", features = ["kv-mem", "kv-rocksdb"]}
+surrealdb = {version = "1.0.0"}
+# surrealdb = {version = "1.0.0", features = ["kv-mem", "kv-rocksdb"]}
 serde = {version = "1", features = ["derive"]}
 serde_json = {version = "1", features = ["preserve_order"]}
 serde_with = "3"
