--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ polars = { version = "0.35", features = [
     "describe",
     "json",
     "dtype-datetime",
+    "dtype-date",
+    "dtype-duration",
+    "dtype-full",
     "dtype-struct",
     "object",
     "serde-lazy",
